add correct way to escape special characters {{ and }}

--- a/002-templates/011-pass-composite-data-structs/004-struct/index.gohtml
+++ b/002-templates/011-pass-composite-data-structs/004-struct/index.gohtml
@@ -7,9 +7,9 @@
 <body>
     <h1>Two types of print the same thing</h1>
 
-    <h2>1. From { .Field_Of_Struct }<br>The {{.Name}} plays {{.Genre}}</h2>
+    <h2>1. From {{`{{.Field_Of_Struct}}`}}<br>The {{.Name}} plays {{.Genre}}</h2>
     {{$band := .Name}}
     {{$genre := .Genre}}
-    <h2>2. From assing variable `{ { $band := .Name } }`<br>The {{$band}} plays {{$genre}}</h2>
+    <h2>2. From assing variable {{`{{$band := .Name}}`}}<br>The {{$band}} plays {{$genre}}</h2>
 </body>
 </html>
