--- a/013-photo-blog/096-start-files/001/templates/index.gohtml
+++ b/013-photo-blog/096-start-files/001/templates/index.gohtml
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
 </head>
+
 <body>
     <h1>index</h1>
     {{if .}}
-        <p>{{.}}</p>
+        {{range .}}
+            <p>{{.}}</p>    
+        {{end}}
     {{end}}
+
+    <form action="/" method="post" enctype="multipart/form-data">
+        <input type="file" name="photo" id="f-photo">
+        <input type="submit" value="upload">
+    </form>
 </body>
+
 </html>
