upload pics to dir and shows these pics

--- a/013-photo-blog/096-start-files/001/templates/index.gohtml
+++ b/013-photo-blog/096-start-files/001/templates/index.gohtml
@@ -10,8 +10,9 @@
 <body>
     <h1>index</h1>
     {{if .}}
+        <p>your pics:</p>
         {{range .}}
-            <p>{{.}}</p>    
+            <img src="/public/pics/{{.}}" alt="{{.}}" width="350px">
         {{end}}
     {{end}}
 
