--- a/014-devtool/112-ajax-with-go/002/templates/index.gohtml
+++ b/014-devtool/112-ajax-with-go/002/templates/index.gohtml
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
+
 <body>
-    <script defer src="/js/script.js"></script>
+    <script defer src="/static/js/script.js"></script>
     <h1>click me</h1>
 </body>
+
 </html>
